@@ -3,3 +3,4 @@ FlyInclude.pl
 .metadata
 RemoteSystemsTempFiles/
 vicidial_fp/
+diffs/
